# tree-risk-pro

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  README.md  poetry.toml  pyproject.toml
tests/: README.md  __init__.py  cuda_tester.py  grounded_sam_tester.py  image_processor.py  ml_tester.py  run_model_tests.sh  run_t4_tests.sh  s2_coordinate_tester.py  unified_test_runner.py
tests/archived_tests/: run_gpu_test.py  test_deepforest_sam.py  test_full_ml_pipeline.py  test_gemini.py  test_ml_pipeline.py  test_ml_s2_only.py  test_real_yolo.py  test_s2_index.py  test_s2_indexing.py  test_yolo.py
tests/ml/: README.md  run_overlay_tests.sh  test_optimized_overlay.html  test_overlay_performance.js
tests/model_server/: README.md  __init__.py  conftest.py  run_test.sh  test_basic.py  test_client.py  test_cuda.py  test_detect.py  test_external_model_service.py  test_imports.py  test_integration.py  test_mock.py  test_model_server.py
tree_ml/: __init__.py
tree_ml/dashboard/: .gitignore  S2_INDEXING.md  check_trees_json.py  index.html  package.json  postcss.config.js  s2_indexing_demo.ipynb  tailwind.config.js  view_ml_results.py  vite.config.js
tree_ml/docs/: CHANGELOG.md  DEPLOYMENT.md  ML_DEPLOYMENT.md  ML_FINDINGS.md  ML_SERVICE.md  ML_TESTING.md  MODEL_SERVER_TROUBLESHOOTING.md  T4_INTEGRATION.md
tree_ml/pipeline/: README.md  data_collection.py  deploy_t4.sh  fix_groundingdino.sh  fix_paths.sh  grounded-sam.md  image_processing.py  model_server.py  object_recognition.py  run_model_server.sh  run_pipeline.py  setup_t4_integration.sh  test_imports.py  tree-detection.service  zarr_store.py
tree_ml/server/: server.cert  server.py  server.sh
tree_risk_pro/: __init__.py
(+184 files in other folders)
